--- a/css/styles.css
+++ b/css/styles.css
@@ -896,7 +896,7 @@ input[type='checkbox'] {
 .copyright {
 	padding-top: 1rem;
 	padding-bottom: 1rem;
-	background-color: #24262a;
+	background-color: #000000;
 	text-align: center;
 }
 
