--- a/css/styles.css
+++ b/css/styles.css
@@ -856,7 +856,7 @@ input[type='checkbox'] {
 .footer {
 	padding-top: 6.25rem;
 	padding-bottom: 2rem;
-	background-color: #24262a;
+	background-color: #000000;
 	text-align: center;
 }
 
